Actualizacion daniel, cambio y creacion de algunos archivos

--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".Generador_de_contratos2"
+            android:exported="true" />
+        <activity
+            android:name=".Generador_de_contratos"
+            android:exported="true" />
+        <activity
             android:name=".Menu_inicial"
             android:exported="true" />
         <activity
