--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".Login"
+            android:exported="true" />
+        <activity
             android:name=".Generador_de_contratos4"
             android:exported="true" />
         <activity
