--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".simulador_creditos"
             android:exported="true" />
         <activity
@@ -43,7 +46,7 @@
             android:name=".contratos"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Pantalla_carga"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
