Generador de contratos2

--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".generador_contratos2"
+            android:exported="true" />
+        <activity
+            android:name=".Calculadora_Impuestos"
+            android:exported="true" />
+        <activity
             android:name=".Datos_inmueble"
             android:exported="true" />
         <activity
